; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_metadata_cache.c_PrepareWorkerNodeCache.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_metadata_cache.c_PrepareWorkerNodeCache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AccessShareLock = common dso_local global i32 0, align 4
@workerNodeHashValid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @PrepareWorkerNodeCache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PrepareWorkerNodeCache() #0 {
  %1 = call i32 (...) @InitializeCaches()
  %2 = call i32 (...) @DistNodeRelationId()
  %3 = load i32, i32* @AccessShareLock, align 4
  %4 = call i32 @LockRelationOid(i32 %2, i32 %3)
  %5 = call i32 (...) @AcceptInvalidationMessages()
  %6 = load i32, i32* @workerNodeHashValid, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %10, label %8

8:                                                ; preds = %0
  %9 = call i32 (...) @InitializeWorkerNodeCache()
  store i32 1, i32* @workerNodeHashValid, align 4
  br label %10

10:                                               ; preds = %8, %0
  ret void
}

declare dso_local i32 @InitializeCaches(...) #1

declare dso_local i32 @LockRelationOid(i32, i32) #1

declare dso_local i32 @DistNodeRelationId(...) #1

declare dso_local i32 @AcceptInvalidationMessages(...) #1

declare dso_local i32 @InitializeWorkerNodeCache(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
